# cesar

./: .gitignore  cesar.slnx
cesar/: cesar.vcxproj  cesar.vcxproj.filters  imgui.ini  main.cpp
cesar/Editor/: Editor.cpp  Editor.h
cesar/Editor/Panels/: Viewport.cpp  Viewport.h
cesar/Engine/: Engine.cpp  Engine.h
cesar_asset/: Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h  cesar_asset.vcxproj  cesar_asset.vcxproj.filters
cesar_asset/ResourceIO/: ImageTextureIO.cpp  ImageTextureIO.h  MaterialIO.cpp  MaterialIO.h  MeshIO.cpp  MeshIO.h  ResourceIO.h  ResourceLoadDesc.h
cesar_asset/Resources/: ImageTexture.h  Material.h  Mesh.h
cesar_core/: cesar_core.cpp  cesar_core.h  cesar_core.vcxproj  cesar_core.vcxproj.filters  pch.cpp  pch.h
cesar_core/Allocator/: LinearAllocator.cpp  LinearAllocator.h  RingAllocator.h
cesar_core/Core/: Align.h  Base.h  Enum.h  FileWatcher.h  Hash.h  Log.h  MathConstants.h  Types.h  UUID.cpp  UUID.h  Utilities.h
cesar_core/Event/: Delegate.h  Input.cpp  Input.h
cesar_core/Platform/: Window.cpp  Window.h
cesar_render/: FrameData.h  Renderer.cpp  Renderer.h  TextureManager.h  cesar_render.vcxproj  cesar_render.vcxproj.filters
cesar_render/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderGraphContext.cpp  RenderGraphContext.h  RenderGraphPass.h  Resource.h  ResourceID.h  ResourceName.h  ResourcePool.h
cesar_render/RenderPass/: DepthPrePass.cpp  DepthPrePass.h  GBufferPass.cpp  GBufferPass.h  LightCullPass.cpp  LightCullPass.h  SceneCullPass.cpp  SceneCullPass.h  VisualizerPass.cpp  VisualizerPass.h
cesar_render_core/: GPUContext.cpp  GPUContext.h  OfflineContext.cpp  OfflineContext.h  RenderContext.cpp  RenderContext.h  cesar_render_core.vcxproj  cesar_render_core.vcxproj.filters
cesar_render_core/Graphics/: Buffer.cpp  Buffer.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  CommandSignature.cpp  CommandSignature.h  Descriptor.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorHeap.cpp  DescriptorHeap.h  DescriptorRingAllocator.h  Device.cpp  Device.h  Fence.cpp  Fence.h  PipelineState.cpp  PipelineState.h  Resource.h  ResourceFormat.h  ShaderManager.cpp  ShaderManager.h  States.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h
cesar_render_core/Shader/: DepthPrePass.hlsl  common_resources.hlsli  compute_common.hlsl  gbuffer_pixel.hlsl  gbuffer_vertex.hlsl
cesar_render_core/Shader/Light/: GenerateClusters.hlsl  LightCommon.hlsli
cesar_render_core/Shader/Meshlet/: CullInstances.hlsl  CullMeshlets.hlsl  DrawMeshlets.hlsl  VizBounds.hlsl  meshlet_common.hlsli
cesar_render_core/Shader/Other/: generate_mipmap.hlsl
cesar_render_core/Shader/Viz/: VizCommon.hlsli  VizMeshletBounds.hlsl
cesar_scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  cesar_scene.vcxproj  cesar_scene.vcxproj.filters  packages.config
cesar_scene/Entity/: Component.h  Entity.cpp  Entity.h
ext/Assimp/: assimp-vc145-mt.lib  matrix4x4.h
ext/DX12 Helper/: DDSTextureLoader.cpp
ext/PIX/: AccelStructureRecreation_000.cpp  AllocationTracker.h  BufferFormats.xml  CMakeLists.txt  CapturedAssets.cpp  CapturedAssets.h  CommandLists.h  CommandLists_000.cpp  CreateAndInitResources_000.cpp  CreatePSOs.cpp  Descriptors_000.cpp  FrameResources.cpp  FrameResources.h  FrameResources_000.cpp  Helpers.h  Main.cpp  ModifyDescriptors_000.cpp  RaytracingInstanceDescs_000.cpp  RenderFrame.cpp  RenderFrame.h  RenderFrameWorker_000.cpp  ResourceModifications_000.cpp  ResourceReader.cpp  ResourceReader.h  ShaderTableReconstruction.h  ShaderTableReconstruction_000.cpp  UploadBuffers.cpp  UploadBuffers.h  Win32Application.cpp  Win32Application.h  d3dx12.h  d3dx12_barriers.h  d3dx12_check_feature_support.h  d3dx12_core.h  d3dx12_default.h  d3dx12_pipeline_state_stream.h  d3dx12_render_pass.h  d3dx12_root_signature.h  d3dx12_state_object.h  pch.h
ext/fastgltf/: fastgltf.cpp  io.cpp
resources/: Cubes.glb  Cubes2.glb  InvalidTexture.psd
resources/Default Materials/: default_material.mtl
